syntax = "proto3";

package proto;

message MatchScheduleReq{
    int32 playerNum = 1;    // 选手人数
    int32 fieldNum = 2;     // 场地数
    int32 roundNum = 3;     // 轮数
    int32 mode = 4;         // 模式 单人/双人
    int32 amplitude = 5;    // 场地调整幅度
}

message MatchScheduleResp {
    string schedule  = 1;
}

service MatchService {
    rpc GetSchedule(MatchScheduleReq) returns (MatchScheduleResp);
}